--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -12,5 +12,12 @@
   width: 22px;
   align-self: center;
   cursor: pointer;
-  margin: 0 30px 0 0;
+  transition: .2s linear;
 }
+
+
+/* .cards__like:hover {
+  background-image: url(../../../images/like_active.svg);
+  transition: .2s linear;
+  opacity: .6s;
+} */
