--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,4 +1,5 @@
 .cards {
+  font-family: 'Inter', 'Arial', 'Sans-serif';
   display: grid;
   grid-template-columns: repeat(3, 282px);
   max-width: 880px;
