--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -1,11 +1,11 @@
 .page__header {
   margin: 45px auto 40px;
-  min-height: 74px;
   border-bottom: 1px solid #545454;
 }
 
 @media (max-width: 425px) {
   .page__header {
-    margin: 28px 0 42px;
+    margin: 0 0 42px 8px;
+    padding: 28px 0 32px 0;
   }
 }
