fix: before first review, test bug

--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -18,6 +18,6 @@ overflow: hidden;
 font-size: 27px;
 line-height: 33px;
 text-align: center;
-margin: 0 10px 14px 0;;
+margin: 0 10px 14px 0;
   }
 }
