fix: delete css unnecessary, change class-name

--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -8,7 +8,19 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 246px;
+  max-width: 200px;
   margin: 0;
   box-sizing: border-box;
+}
+
+@media screen and (max-width:950px) {
+  .cards__title {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width:425px) {
+  .cards__title {
+    max-width: 85%;
+  }
 }
