--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -14,9 +14,8 @@
   transition: .2s linear;
 }
 
-
-/* .cards__like:hover {
+.cards__like:hover {
   background-image: url(../../../images/like_active.svg);
   transition: .2s linear;
   opacity: .6s;
-} */
+}
