--- a/blocks/form/__save-button/form__save-button.css
+++ b/blocks/form/__save-button/form__save-button.css
@@ -1,4 +1,4 @@
-.popup__save-button {
+.form__save-button {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -19,15 +19,16 @@
   padding: 0;
   transition: .4s ease-in-out;
   border-radius: 2px;
+  border: 0;
 }
 
-.popup__save-button:hover {
+.form__save-button:hover {
   opacity: .8;
   transition: .4s ease-in-out;
 }
 
 @media screen and (max-width: 425px) {
-  .popup__save-button {
+  .form__save-button {
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
