--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,7 +7,7 @@
   padding-bottom: 41px;
 }
 
-@media (min-width: 320px) and (max-width: 425px) {
+@media (min-width: 320px) {
   .header {
     max-width: 320px;
     padding-bottom: 32px;
