--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -17,5 +17,10 @@
   .page__container {
     padding: 0 19px;
   }
+}
 
+@media screen  and (max-width: 320px){
+  .page__container {
+    padding: 0;
+  }
 }
