--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,5 +1,5 @@
 .profile__description {
-  font-family: Inter,sans-serif,Arial;
+  font-family: 'Inter', 'Arial', 'sans-serif';
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
