--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,5 +1,5 @@
 .profile__title {
-font-family: Inter,sans-serif,Arial;
+font-family: 'Inter', 'Arial', 'sans-serif';
 font-size: 42px;
 font-style: normal;
 font-weight: 500;
