--- a/pages/index.css
+++ b/pages/index.css
@@ -10,18 +10,17 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__name/popup__name.css);
-@import url(../blocks/popup/__job/popup__job.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__container/poup__container.css);
-@import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__job/form__job.css);
+@import url(../blocks/form/__name/form__name.css);
+@import url(../blocks/form/__save-button/form__save-button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/section/section.css);
 @import url(../blocks/content/__section/content__section.css);
 @import url(../blocks/profile/profile.css);
-@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__container/profile__container.css);
