--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,7 +7,7 @@
   padding-bottom: 41px;
 }
 
-@media (max-width: 320px) {
+@media screen and (max-width: 320px) {
   .header {
     max-width: 320px;
     padding-bottom: 32px;
