--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -11,8 +11,9 @@
 
 @media screen and (max-width: 425px) {
   .footer__copyright {
-font-size: 14px;
-font-weight: 400;
-line-height: 17px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    padding: 0 19px;
   }
 }
