--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,6 +7,7 @@
   letter-spacing: 0em;
   text-align: left;
   color: #545454;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 425px) {
@@ -14,6 +15,11 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer__copyright {
     padding: 0 19px;
   }
 }
