--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,5 @@
 .footer__copyright {
-  font-family: 'Inter', 'sans-serif', 'Arial';
+  font-family: 'Inter', 'Arial', 'sans-serif';
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
