--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -1,7 +1,6 @@
 .page__header {
   margin: 45px auto 40px;
-  border-bottom: 1px solid #545454;
-  opacity: .7;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media (max-width: 425px) {
