--- a/pages/index.css
+++ b/pages/index.css
@@ -10,6 +10,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__container/poup__container.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
