--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,7 +10,8 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  visibility: hidden;
+  opacity: 0;
   transition: visibility 0.2s, opacity 0.2s linear;
-  display: none;
   font-family: 'Inter', 'Arial', 'Sans-serif';
 }
