--- a/pages/index.css
+++ b/pages/index.css
@@ -41,5 +41,6 @@
 @import url(../blocks/cards/__description-container/cards__description-container.css);
 @import url(../blocks/cards/__like/cards__like.css);
 @import url(../blocks/cards/__like/_active/cards__like_active.css);
+@import url(../blocks/cards/__remove/cards__remove.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
