--- a/pages/index.css
+++ b/pages/index.css
@@ -14,8 +14,11 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__container/poup__container.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
+@import url(../blocks/popup/__photo/popup__photo.css);
+@import url(../blocks/popup/__photo/popup__photo-caption.css);
 @import url(../blocks/popup/_type/popup_type_profile.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
+@import url(../blocks/popup/_type/popup_type_size-image.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__input/_type/form__input_type_job.css);
