--- a/blocks/popup/__container/poup__container.css
+++ b/blocks/popup/__container/poup__container.css
@@ -16,6 +16,7 @@
 @media screen and (max-width: 425px) {
   .popup__container {
     padding: 25px 22px;
-    width: 282px;
+    max-width: 282px;
   }
 }
+
