fix: bug container modal

--- a/blocks/popup/__close-button/_size/popup__close-button_size_image.css
+++ b/blocks/popup/__close-button/_size/popup__close-button_size_image.css
@@ -6,5 +6,6 @@
     top: -35px;
     background: url(../../../images/closeiconmini.svg);
     background-repeat: no-repeat;
+    margin: 0 auto;
   }
 }
