--- a/blocks/popup/__container/poup__container.css
+++ b/blocks/popup/__container/poup__container.css
@@ -13,11 +13,11 @@
   box-shadow: 0px 0px 25px 0px #00000026;
 }
 
+
 @media screen and (max-width: 425px) {
   .popup__container {
     padding: 25px 22px;
-    max-width: 282px;
-    margin: 0 auto;
+    width: 282px;
   }
 }
 
