--- a/blocks/popup/__photo/popup__photo.css
+++ b/blocks/popup/__photo/popup__photo.css
@@ -1,7 +1,7 @@
 .popup__photo {
   max-width: 75vw;
   max-height: 75vh;
-};
+}
 
 
 @media screen and (max-width: 425px) {
@@ -9,4 +9,4 @@
     max-width: 240px;
     max-height: 299px;
   }
-};
+}
