--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -5,13 +5,10 @@
   min-width: 320px;
   width: 100%;
   box-sizing: border-box;
-  height: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
-
-/* * {
-  border: 1px solid red;
-} */
-
 
 @media screen  and (max-width: 768px){
   .page__container {
