--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 @import url(../blocks/page/__link/page__link.css);
 @import url(../blocks/page/__header/page__header.css);
 @import url(../blocks/page/__profile/page__profile.css);
+@import url(../blocks/content/content.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/popup/popup.css);
