--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -5,7 +5,7 @@
   min-width: 320px;
   width: 100%;
   box-sizing: border-box;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
