--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -15,3 +15,8 @@
   transition: visibility 0.2s, opacity 0.2s linear;
   font-family: 'Inter', 'Arial', 'Sans-serif';
 }
+
+
+.popup:hover {
+  cursor: pointer;
+}
