--- a/blocks/popup/__container/poup__container.css
+++ b/blocks/popup/__container/poup__container.css
@@ -11,13 +11,14 @@
   box-sizing: border-box;
   border-radius: 10px;
   box-shadow: 0px 0px 25px 0px #00000026;
+  min-width: 430px;
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 425px) {
   .popup__container {
     padding: 25px 22px;
-    width: 282px;
+    min-width: 282px;
   }
 }
 
