--- a/blocks/form/__error/form__error.css
+++ b/blocks/form/__error/form__error.css
@@ -2,7 +2,8 @@
   color: #FF3333;
   font-size: 0.8em;
   transition: .3s;
-  padding: 10px;
+  /* padding: 10px; */
   opacity: 1;
   display: none;
+  position: absolute;
 }
