--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,4 +1,8 @@
 .form {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 0;
 max-width: 358px;
 width: 100%;
 font-size: 14px;
