--- a/blocks/form/__input/_type/form__input_type_place.css
+++ b/blocks/form/__input/_type/form__input_type_place.css
@@ -4,10 +4,6 @@
   width: 100%;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  /* padding-bottom: 9px;
-  margin-bottom: 30px; */
+  padding-bottom: 9px;
+  margin-bottom: 30px;
 }
-
-
-
-
