--- a/blocks/form/__save-button/form__save-button.css
+++ b/blocks/form/__save-button/form__save-button.css
@@ -7,7 +7,7 @@
   background: black;
   cursor: pointer;
   color: #fff;
-  margin-bottom: 36px;
+  margin: 48px auto 0;
   max-width: 358px;
   min-height: 50px;
   font-size: 18px;
