--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -22,7 +22,7 @@
   .popup__close-button {
     height: 20px;
     width: 20px;
-    right: 10px;
+    right: 0;
     top: -35px;
     background: url(../../../images/closeiconmini.svg);
   }
