--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -6,4 +6,9 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 9px;
     padding-top: 3px;
+    outline-color: #08e80f;
   }
+
+  /* .form__input:-webkit-autofill {
+    transition: all 5000s ease-in-out;
+} */
