--- a/blocks/popup/__container/poup__container.css
+++ b/blocks/popup/__container/poup__container.css
@@ -12,7 +12,7 @@
   border-radius: 10px;
   box-shadow: 0px 0px 25px 0px #00000026;
   min-width: 430px;
-  max-height: 330px;
+  /* max-height: 330px; */
 }
 
 
