9 sprint api cards

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -42,6 +42,7 @@
 @import url(../blocks/profile/__description/profile__description.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__photo/cards__photo.css);
 @import url(../blocks/cards/__item/cards__item.css);
