--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -50,6 +50,7 @@
 @import url(../blocks/cards/__description-container/cards__description-container.css);
 @import url(../blocks/cards/__like/cards__like.css);
 @import url(../blocks/cards/__like/_active/cards__like_active.css);
+@import url(../blocks/cards/__remove/_show/cards__remove_show.css);
 @import url(../blocks/cards/__conteiner-likes/cards__conteiner-like.css);
 @import url(../blocks/cards/__count-likes/cards__count-likes.css);
 @import url(../blocks/cards/__remove/cards__remove.css);
