--- a/src/blocks/profile/__avatar-container/profile__avatar-container.css
+++ b/src/blocks/profile/__avatar-container/profile__avatar-container.css
@@ -1,6 +1,6 @@
 .profile__avatar-container {
-  height: 120px;
-  width: 120px;
+  /* height: 120px;
+  width: 120px; */
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -28,5 +28,4 @@
   background-position: center;
   border-radius: 50%;
   opacity: .8;
-  margin-right: 30px;
 }
