--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,10 +1,8 @@
 .profile__avatar {
   border-radius: 50%;
-  max-width: 120px;
-  margin-right: 30px;
+  width: 120px;
   height: 120px;
   }
-
 
 @media screen and (max-width: 425px) {
   .profile__avatar {
